# memory

./: .env  .gitignore  README.md  download.py  pyproject.toml  self_domain.json  user_domain.json
data/: self_domain.json  user_domain.json
output/: memory_store.jsonl
src/: Zero_7.py  config.py  domain.py  element_extractor.py  info_block_manager.py  llm_client.py  logger.py  main.py  main_voice.py  memory_builder.py  memory_store.py  memory_structures.py  noise_detector.py  prompt.py  topic_manager.py  trust.py
src/voice/: __init__.py
src/voice/asr/: __init__.py  tencent_asr.py
src/voice/player/: __init__.py  chat_speaker.py
src/voice/recorder/: __init__.py  audio_recorder.py
src/voice/tts/: __init__.py  edge_tts.py  kdxf_tts.py  local_tts.py  nailong_tts.py
